# query-playback

./: .bzrignore  .gitignore  .quickly  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING.BSD2  Dockerfile  LICENSE  Makefile.am  README  README.md  config.h.in  configure.ac  percona-playback.spec  test_run.sh
config/: autorun.sh  pandora-plugin  pandora-plugin.ini
debian/: README.source  changelog  control  copyright  files  percona-playback-dev.install  percona-playback.install
doc/: Makefile  include.am
doc/source/: conf.py  faq.rst  glossary.rst  index.rst  installation.rst  intro.rst  manual.rst  release-notes.rst
doc/source/release-notes/0/: 0.1.rst
docs/: .gitignore  Doxyfile  Makefile  conf.py  include.am  index.rst  installation.rst  intro.rst  manual.rst  pp_option_reference.rst
docs/installation/: compiling_playback.rst
docs/percona-theme/: layout.html
docs/plugins/: list.rst  query_log  tcpdump
docs/release-notes/0/: 0.5.rst  0.6.rst
docs/source/: conf.py  index.rst  installation.rst  intro.rst  known_issues.rst  manual.rst  overview.rst  pp_option_reference.rst  query_log.rst  release-notes.rst  tcpdump.rst
docs/source/installation/: compiling_playback.rst  yum_repo.rst
docs/source/plugins/: query_log_plugin.rst  tcpdump_plugin.rst
docs/source/release-notes/0/: 0.2.rst  0.3.rst  0.4.rst  0.5.rst  0.7.rst
doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  include.am
m4/: acx_pthread.m4  pandora_canonical.m4  pandora_enable_dtrace.m4  pandora_have_libboost_filesystem.m4  pandora_have_libboost_thread.m4  pandora_have_libcurl.m4  pandora_have_libdrizzle-1.0.m4  pandora_have_libdrizzle.m4  pandora_have_libmysqlclient.m4  pandora_have_libpcap.m4  pandora_have_libv8.m4  pandora_have_tbb.m4
packaging/: percona-playback.spec
packaging/debian/: README.Debian  changelog  control  copyright
packaging/debian/patches/: fix-libdrizzle-includes.patch  series
percona-playback/: .quickly  AUTHORS  Makefile.am  configure.ac
percona-playback/config/: pandora-plugin.ini
percona-playback/percona_playback/: percona_playback.c  percona_playback.cc  percona_playback.h
percona-playback/percona_playback/test/: basic.c  basic.cc
percona_playback/: CMakeLists.txt  db_thread.cc  db_thread.h  dispatcher.cc  dispatcher.h  gettext.h  percona_playback.cc  percona_playback.h  plugin.cc  plugin.cmake  plugin.h  plugin_load_list.h.in  query_entry.h  query_result.h  tokenize.h  version.h.in  visibility.h
percona_playback/error_report/: CMakeLists.txt  error_report.cc  plugin.ini
percona_playback/full_report/: CMakeLists.txt  full_report.cc  plugin.ini
percona_playback/general_log/: CMakeLists.txt  general_log.cc  general_log.h  general_log_entry.cc  general_log_entry.h  parse_general_log.cc  parse_general_log.h  plugin.ini
percona_playback/libdrizzle_client/: libdrizzle_client.cc  plugin.ini
percona_playback/mysql_client/: CMakeLists.txt  mysql_client.cc  mysql_client.h  plugin.ac  plugin.ini
percona_playback/null_dbclient/: CMakeLists.txt  null_dbclient.cc  plugin.ini
percona_playback/query_log/: CMakeLists.txt  plugin.ini  query_log.cc  query_log.h
percona_playback/query_log/docs/: index.rst
percona_playback/simple_report/: CMakeLists.txt  plugin.ini  simple_report.cc
percona_playback/tcpdump/: connection_state.cc  connection_state.h  pcap_packets_parser.cc  pcap_packets_parser.h  plugin.ac  plugin.ini  sniff_headers.h  tcpdump.cc  tcpdump.h  tcpdump_mysql_parser_stats.h  tcpdump_query_entries.cc  tcpdump_query_entries.h
percona_playback/tcpdump/docs/: index.rst
percona_playback/test/: CMakeLists.txt  basic-multiline.cc  basic-queue-depth.cc  basic-stdin.cc  basic.cc  crashme-slow.cc  help.cc  preserve_query_time.cc  sqlbench-transactions-slow.cc  sysbench-slow.cc  tcpdump_accuracy.cc  tcpdump_accuracy.dump  tcpdump_fragmented_packet.cc  tcpdump_fragmented_packet.dump  tcpdump_multiple_connections.cc  tcpdump_multiple_connections.dump  tcpdump_stress_test.cc  tcpdump_without_handshake.cc  tcpdump_without_handshake.dump  thread-pool-sysbench-slow.cc  util.h
percona_playback/thread_per_connection/: CMakeLists.txt  plugin.ini  thread_per_connection.cc
percona_playback/thread_pool/: CMakeLists.txt  plugin.ini  thread_pool.cc
po/: ChangeLog  Makevars  POTFILES.in  en_AU.po
